<resources>
    <string name="app_name">Mochila</string>
    <string name="str_contenido">Contenido:</string>
    <string name="str_gorras">Gorras</string>
    <string name="str_banadores">Bañadores</string>
    <string name="str_camisetas">Camisetas</string>
    <string name="str_zapatos">Zapatos</string>
    <string name="str_pantalones">Pantalones</string>
    <string name="str_libros">Libros</string>
    <string name="str_vaciar">Vaciar mochila</string>
    <string name="str_sol">Peso 0 Kg</string>
</resources>